--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -2,55 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-    "from sklearn.linear_model import LogisticRegression, LinearRegression\n",
-    "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score, mean_squared_error, r2_score\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score, average_precision_score, precision_recall_curve, confusion_matrix\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "df = pd.read_csv('/Users/neha/Downloads/test_hsbc_df.csv')  \n"
+    "df = pd.read_csv('test_hsbc_df.csv')  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_to_drop = ['zipcodeOri', 'zipMerchant']\n",
+    "existing = [c for c in cols_to_drop if c in df.columns]\n",
+    "if existing:\n",
+    "    df = df.drop(columns=existing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['amount'] = df['amount'].astype('float32')\n",
     "\n",
-    "categorical_columns = df.select_dtypes(include=['object']).columns\n",
-    "for col in categorical_columns:\n",
-    "    df[col] = df[col].astype('category')\n"
+    "categorical_columns = df.select_dtypes(include=['object', 'category']).columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "label_encoders = {}\n",
-    "for col in categorical_columns:\n",
-    "    le = LabelEncoder()\n",
-    "    df[col] = le.fit_transform(df[col])\n",
-    "    label_encoders[col] = le\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -75,7 +79,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_features = ['amount']\n",
+    "preprocessor = ColumnTransformer([\n",
+    "    ('num', StandardScaler(), numeric_features)\n",
+    "], remainder='passthrough')\n",
+    "\n",
+    "pipeline = Pipeline(steps=[\n",
+    "    ('preprocess', preprocessor),\n",
+    "    ('model', LogisticRegression(class_weight='balanced', max_iter=2000, random_state=42))\n",
+    "])\n",
+    "\n",
+    "pipeline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate pipeline: ROC-AUC, PR-AUC, and threshold tuning via F1\n",
+    "y_proba = pipeline.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "roc = roc_auc_score(y_test, y_proba)\n",
+    "ap = average_precision_score(y_test, y_proba)\n",
+    "\n",
+    "prec, rec, thr = precision_recall_curve(y_test, y_proba)\n",
+    "f1_scores = (2 * prec * rec) / (prec + rec + 1e-12)\n",
+    "# precision_recall_curve returns one more precision/recall than thresholds\n",
+    "# Align by ignoring the last point for threshold selection\n",
+    "best_idx = f1_scores[:-1].argmax()\n",
+    "best_threshold = thr[best_idx]\n",
+    "\n",
+    "y_pred = (y_proba >= best_threshold).astype(int)\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "TP = cm[1,1]; FP = cm[0,1]; TN = cm[0,0]; FN = cm[1,0]\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"ROC-AUC: {roc:.4f}\")\n",
+    "print(f\"PR-AUC (Average Precision): {ap:.4f}\")\n",
+    "print(f\"Best threshold by F1: {best_threshold:.4f}\")\n",
+    "print(f\"TP={TP}, FP={FP}, TN={TN}, FN={FN}\")\n",
+    "print(f\"Precision={precision*100:.2f}%, Recall={recall*100:.2f}%, F1={f1*100:.2f}%\")\n",
+    "\n",
+    "# Plot ROC and PR curves\n",
+    "from sklearn.metrics import roc_curve\n",
+    "fpr, tpr, _ = roc_curve(y_test, y_proba)\n",
+    "plt.figure(figsize=(10,4))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(fpr, tpr, label=f'ROC-AUC={roc:.3f}')\n",
+    "plt.plot([0,1],[0,1],'k--')\n",
+    "plt.xlabel('FPR'); plt.ylabel('TPR'); plt.title('ROC Curve'); plt.legend()\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(rec, prec, label=f'PR-AUC={ap:.3f}')\n",
+    "plt.xlabel('Recall'); plt.ylabel('Precision'); plt.title('Precision-Recall Curve'); plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -103,12 +174,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "logistic_model = LogisticRegression(random_state=42, max_iter=200)\n",
-    "logistic_model.fit(X_train, y_train)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -119,19 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -152,27 +213,11 @@
      ]
     }
    ],
-   "source": [
-    "\n",
-    "y_pred_prob_logistic = logistic_model.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "\n",
-    "threshold = 0.7 \n",
-    "y_pred_adjusted = (y_pred_prob_logistic >= threshold).astype(int)\n",
-    "\n",
-    "\n",
-    "precision_adjusted = precision_score(y_test, y_pred_adjusted) * 100\n",
-    "recall_adjusted = recall_score(y_test, y_pred_adjusted) * 100\n",
-    "f1_adjusted = f1_score(y_test, y_pred_adjusted) * 100\n",
-    "\n",
-    "print(f'Adjusted Logistic Regression Precision: {precision_adjusted:.2f}%')\n",
-    "print(f'Adjusted Logistic Regression Recall: {recall_adjusted:.2f}%')\n",
-    "print(f'Adjusted Logistic Regression F1 Score: {f1_adjusted:.2f}%')\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,19 +231,14 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "linear_model = LinearRegression()\n",
-    "linear_model.fit(X_train, y_train)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "importance_logistic = logistic_model.coef_[0]\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -675,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -689,20 +729,11 @@
      ]
     }
    ],
-   "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
-    "\n",
-    "print(f'True Positives (TP): {tp}')\n",
-    "print(f'False Positives (FP): {fp}')\n",
-    "print(f'True Negatives (TN): {tn}')\n",
-    "print(f'False Negatives (FN): {fn}')\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -714,17 +745,11 @@
      ]
     }
    ],
-   "source": [
-    "precision = tp / (tp + fp) * 100\n",
-    "recall = tp / (tp + fn) * 100\n",
-    "\n",
-    "print(f'Precision: {precision:.2f}%')\n",
-    "print(f'Recall: {recall:.2f}%')\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -735,12 +760,7 @@
      ]
     }
    ],
-   "source": [
-    "f1 = 2 * (precision * recall) / (precision + recall)\n",
-    "f1 = f1 / 100\n",
-    "f1_percentage = f1 * 100\n",
-    "print(f'F1 Score: {f1_percentage:.2f}%')\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
