Phase 4: OneHot low-cardinality features, business threshold (>=90% precision), and 5-fold PR-AUC CV

--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -7,12 +7,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_val_score\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score, average_precision_score, precision_recall_curve, confusion_matrix\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score, average_precision_score, precision_recall_curve, confusion_matrix, roc_curve\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
@@ -83,9 +83,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric_features = ['amount']\n",
+    "# Phase 4: Feature grouping and updated Pipeline with OneHot for low-cardinality categoricals\n",
+    "# Determine low-cardinality categorical-like features on the training split\n",
+    "nunique = X_train.nunique()\n",
+    "low_cardinality_cats = [c for c in X_train.columns if (X_train[c].dtype in ['int64', 'int32', 'object', 'category']) and (nunique[c] > 1) and (nunique[c] <= 50)]\n",
+    "\n",
+    "# Continuous/numeric features to scale (keep 'amount' and other continuous ints like 'step', 'age' if present)\n",
+    "continuous_candidates = ['amount', 'step', 'age']\n",
+    "numeric_features = [c for c in continuous_candidates if c in X_train.columns]\n",
+    "\n",
     "preprocessor = ColumnTransformer([\n",
-    "    ('num', StandardScaler(), numeric_features)\n",
+    "    ('num', StandardScaler(), numeric_features),\n",
+    "    ('cat_low', OneHotEncoder(handle_unknown='ignore', sparse=False), low_cardinality_cats)\n",
     "], remainder='passthrough')\n",
     "\n",
     "pipeline = Pipeline(steps=[\n",
@@ -93,7 +102,10 @@
     "    ('model', LogisticRegression(class_weight='balanced', max_iter=2000, random_state=42))\n",
     "])\n",
     "\n",
-    "pipeline.fit(X_train, y_train)"
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "print('Low-cardinality categorical features:', low_cardinality_cats)\n",
+    "print('Numeric features (scaled):', numeric_features)"
    ]
   },
   {
@@ -142,6 +154,62 @@
     "plt.xlabel('Recall'); plt.ylabel('Precision'); plt.title('Precision-Recall Curve'); plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 4: Business-driven threshold selection (e.g., target precision >= 90%)\n",
+    "# Sweep thresholds to find the highest recall with precision >= target\n",
+    "import numpy as np\n",
+    "\n",
+    "target_precision = 0.90\n",
+    "prec, rec, thr = precision_recall_curve(y_test, y_proba)\n",
+    "# Align sizes: prec/rec len = len(thr)+1; use thresholds' indices\n",
+    "valid = []\n",
+    "for i, t in enumerate(thr):\n",
+    "    p = prec[i]\n",
+    "    r = rec[i]\n",
+    "    if p >= target_precision:\n",
+    "        valid.append((t, p, r))\n",
+    "\n",
+    "if valid:\n",
+    "    # choose threshold that maximizes recall under precision constraint\n",
+    "    best_t, best_p, best_r = max(valid, key=lambda x: x[2])\n",
+    "else:\n",
+    "    # fallback to best F1 threshold if constraint not achievable\n",
+    "    best_t = best_threshold\n",
+    "    # recompute p/r at fallback\n",
+    "    y_tmp = (y_proba >= best_t).astype(int)\n",
+    "    best_p = precision_score(y_test, y_tmp)\n",
+    "    best_r = recall_score(y_test, y_tmp)\n",
+    "\n",
+    "# Evaluate at chosen threshold\n",
+    "y_pred_business = (y_proba >= best_t).astype(int)\n",
+    "cm_biz = confusion_matrix(y_test, y_pred_business)\n",
+    "TPb = cm_biz[1,1]; FPb = cm_biz[0,1]; TNb = cm_biz[0,0]; FNb = cm_biz[1,0]\n",
+    "fbiz = f1_score(y_test, y_pred_business)\n",
+    "\n",
+    "print(f\"Target precision: {target_precision*100:.0f}%\")\n",
+    "print(f\"Chosen threshold: {best_t:.4f}\")\n",
+    "print(f\"Precision={best_p*100:.2f}%, Recall={best_r*100:.2f}%, F1={fbiz*100:.2f}%\")\n",
+    "print(f\"TP={TPb}, FP={FPb}, TN={TNb}, FN={FNb}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 4: Stratified 5-fold CV with PR-AUC (Average Precision)\n",
+    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "cv_scores = cross_val_score(pipeline, X, y, cv=skf, scoring='average_precision', n_jobs=None)\n",
+    "print('PR-AUC (AP) CV scores:', [f\"{s:.4f}\" for s in cv_scores])\n",
+    "print(f\"PR-AUC (AP) CV mean: {cv_scores.mean():.4f} ± {cv_scores.std():.4f}\")"
    ]
   },
   {
