Phase 5-6: time-based split option; GridSearchCV tuning for LogisticRegression

--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -69,12 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Phase 5: Optional time-based split using `step` if present\n",
+    "# Set this flag to True to use chronological split; otherwise uses stratified random split\n",
+    "USE_TIME_SPLIT = True\n",
+    "TEST_SIZE = 0.30\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n"
+    "if USE_TIME_SPLIT and ('step' in X.columns):\n",
+    "    # Sort by step to preserve time order\n",
+    "    df_sorted = df.sort_values('step').reset_index(drop=True)\n",
+    "    X_sorted = df_sorted.drop(columns=['fraud'])\n",
+    "    y_sorted = df_sorted['fraud']\n",
+    "    split_idx = int(len(df_sorted) * (1 - TEST_SIZE))\n",
+    "    X_train, X_test = X_sorted.iloc[:split_idx], X_sorted.iloc[split_idx:]\n",
+    "    y_train, y_test = y_sorted.iloc[:split_idx], y_sorted.iloc[split_idx:]\n",
+    "else:\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y, test_size=TEST_SIZE, random_state=42, stratify=y\n",
+    "    )"
    ]
   },
   {
@@ -210,6 +225,44 @@
     "cv_scores = cross_val_score(pipeline, X, y, cv=skf, scoring='average_precision', n_jobs=None)\n",
     "print('PR-AUC (AP) CV scores:', [f\"{s:.4f}\" for s in cv_scores])\n",
     "print(f\"PR-AUC (AP) CV mean: {cv_scores.mean():.4f} ± {cv_scores.std():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 6: Hyperparameter tuning (GridSearchCV) for LogisticRegression within the Pipeline\n",
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
+    "\n",
+    "param_grid = {\n",
+    "    'model__C': [0.01, 0.1, 1.0, 10.0],\n",
+    "    'model__solver': ['lbfgs', 'saga']\n",
+    "}\n",
+    "cv = StratifiedKFold(n_splits=3, shuffle=True, random_state=42)\n",
+    "\n",
+    "grid = GridSearchCV(\n",
+    "    estimator=pipeline,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring='average_precision',\n",
+    "    cv=cv,\n",
+    "    n_jobs=None,\n",
+    "    refit=True,\n",
+    "    verbose=0\n",
+    ")\n",
+    "\n",
+    "grid.fit(X_train, y_train)\n",
+    "\n",
+    "pipeline = grid.best_estimator_\n",
+    "print('Best params:', grid.best_params_)\n",
+    "print(f'Best CV AP: {grid.best_score_:.4f}')\n",
+    "\n",
+    "# Quick eval on test with tuned pipeline\n",
+    "y_proba = pipeline.predict_proba(X_test)[:, 1]\n",
+    "roc = roc_auc_score(y_test, y_proba)\n",
+    "ap = average_precision_score(y_test, y_proba)\n",
+    "print(f\"[Tuned] ROC-AUC: {roc:.4f} | PR-AUC (AP): {ap:.4f}\")"
    ]
   },
   {
