Phase 7-9: calibrated probabilities, persisted artifacts, permutation importance

--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -6,15 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os, json\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_val_score\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_val_score, GridSearchCV\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score, average_precision_score, precision_recall_curve, confusion_matrix, roc_curve\n",
+    "from sklearn.calibration import CalibratedClassifierCV\n",
+    "from sklearn.inspection import permutation_importance\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import joblib"
    ]
   },
   {
@@ -263,6 +267,144 @@
     "roc = roc_auc_score(y_test, y_proba)\n",
     "ap = average_precision_score(y_test, y_proba)\n",
     "print(f\"[Tuned] ROC-AUC: {roc:.4f} | PR-AUC (AP): {ap:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 7: Probability calibration (isotonic) and evaluation\n",
+    "# Calibrate probabilities to improve thresholding reliability\n",
+    "calibrated_model = CalibratedClassifierCV(base_estimator=pipeline, method='isotonic', cv=3)\n",
+    "calibrated_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate calibrated model\n",
+    "y_proba_cal = calibrated_model.predict_proba(X_test)[:, 1]\n",
+    "roc_cal = roc_auc_score(y_test, y_proba_cal)\n",
+    "ap_cal = average_precision_score(y_test, y_proba_cal)\n",
+    "\n",
+    "prec_cal, rec_cal, thr_cal = precision_recall_curve(y_test, y_proba_cal)\n",
+    "f1_scores_cal = (2 * prec_cal * rec_cal) / (prec_cal + rec_cal + 1e-12)\n",
+    "best_idx_cal = f1_scores_cal[:-1].argmax()\n",
+    "best_threshold_cal = thr_cal[best_idx_cal]\n",
+    "\n",
+    "print(f\"[Calibrated] ROC-AUC: {roc_cal:.4f} | PR-AUC (AP): {ap_cal:.4f}\")\n",
+    "print(f\"[Calibrated] Best threshold by F1: {best_threshold_cal:.4f}\")\n",
+    "\n",
+    "# Choose business threshold on calibrated probs (precision >= 90%)\n",
+    "target_precision = 0.90\n",
+    "valid = []\n",
+    "for i, t in enumerate(thr_cal):\n",
+    "    p = prec_cal[i]\n",
+    "    r = rec_cal[i]\n",
+    "    if p >= target_precision:\n",
+    "        valid.append((t, p, r))\n",
+    "\n",
+    "if valid:\n",
+    "    best_t_biz_cal, best_p_biz_cal, best_r_biz_cal = max(valid, key=lambda x: x[2])\n",
+    "else:\n",
+    "    best_t_biz_cal = best_threshold_cal\n",
+    "    y_tmp = (y_proba_cal >= best_t_biz_cal).astype(int)\n",
+    "    best_p_biz_cal = precision_score(y_test, y_tmp)\n",
+    "    best_r_biz_cal = recall_score(y_test, y_tmp)\n",
+    "\n",
+    "y_pred_biz_cal = (y_proba_cal >= best_t_biz_cal).astype(int)\n",
+    "cm_biz_cal = confusion_matrix(y_test, y_pred_biz_cal)\n",
+    "TPc = cm_biz_cal[1,1]; FPc = cm_biz_cal[0,1]; TNc = cm_biz_cal[0,0]; FNc = cm_biz_cal[1,0]\n",
+    "fbiz_cal = f1_score(y_test, y_pred_biz_cal)\n",
+    "\n",
+    "print(f\"[Calibrated] Business threshold (>= {int(target_precision*100)}% precision): {best_t_biz_cal:.4f}\")\n",
+    "print(f\"[Calibrated] Precision={best_p_biz_cal*100:.2f}%, Recall={best_r_biz_cal*100:.2f}%, F1={fbiz_cal*100:.2f}%\")\n",
+    "print(f\"[Calibrated] TP={TPc}, FP={FPc}, TN={TNc}, FN={FNc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 8: Persist calibrated model and chosen thresholds\n",
+    "ARTIFACTS_DIR = 'artifacts'\n",
+    "os.makedirs(ARTIFACTS_DIR, exist_ok=True)\n",
+    "\n",
+    "# Save calibrated model\n",
+    "model_path = os.path.join(ARTIFACTS_DIR, 'calibrated_pipeline.joblib')\n",
+    "joblib.dump(calibrated_model, model_path)\n",
+    "\n",
+    "# Save thresholds and metrics in JSON\n",
+    "info = {\n",
+    "    'best_threshold_f1_calibrated': float(best_threshold_cal),\n",
+    "    'business_threshold_precision_90_calibrated': float(best_t_biz_cal),\n",
+    "    'roc_auc_calibrated': float(roc_cal),\n",
+    "    'pr_auc_calibrated': float(ap_cal)\n",
+    "}\n",
+    "with open(os.path.join(ARTIFACTS_DIR, 'model_info.json'), 'w') as f:\n",
+    "    json.dump(info, f, indent=2)\n",
+    "\n",
+    "print('Saved:', model_path)\n",
+    "print('Saved:', os.path.join(ARTIFACTS_DIR, 'model_info.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 9: Permutation importance on calibrated pipeline (warning: may be slow)\n",
+    "# We need numeric feature names after preprocessing. We'll attempt to extract names for transformed features.\n",
+    "\n",
+    "def get_feature_names(preprocessor: ColumnTransformer, X_input: pd.DataFrame):\n",
+    "    names = []\n",
+    "    for name, trans, cols in preprocessor.transformers_:\n",
+    "        if name == 'remainder' and trans == 'drop':\n",
+    "            continue\n",
+    "        if name == 'remainder' and trans == 'passthrough':\n",
+    "            # passthrough columns\n",
+    "            if isinstance(cols, slice):\n",
+    "                passthrough_cols = X_input.columns[cols]\n",
+    "            else:\n",
+    "                passthrough_cols = [X_input.columns[i] if isinstance(i, int) else i for i in cols]\n",
+    "            names.extend(list(passthrough_cols))\n",
+    "        else:\n",
+    "            if hasattr(trans, 'get_feature_names_out'):\n",
+    "                out = trans.get_feature_names_out(cols)\n",
+    "                names.extend(list(out))\n",
+    "            else:\n",
+    "                # Fallback: use original column names\n",
+    "                if isinstance(cols, (list, tuple)):\n",
+    "                    names.extend(list(cols))\n",
+    "                else:\n",
+    "                    names.append(cols)\n",
+    "    return names\n",
+    "\n",
+    "# Caution: CalibratedClassifierCV wraps the pipeline; for permutation importance we use the calibrated model's predict_proba\n",
+    "r = permutation_importance(\n",
+    "    calibrated_model, X_test, y_test, n_repeats=5, random_state=42, scoring='average_precision'\n",
+    ")\n",
+    "\n",
+    "# Attempt to derive feature names from the inner pipeline's preprocessor\n",
+    "try:\n",
+    "    feature_names = get_feature_names(pipeline.named_steps['preprocess'], X_train)\n",
+    "except Exception:\n",
+    "    feature_names = [f'feat_{i}' for i in range(r.importances_mean.shape[0])]\n",
+    "\n",
+    "imp_df = pd.DataFrame({\n",
+    "    'feature': feature_names,\n",
+    "    'importance_mean': r.importances_mean,\n",
+    "    'importance_std': r.importances_std\n",
+    "}).sort_values('importance_mean', ascending=False).head(25)\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "sns.barplot(data=imp_df, x='importance_mean', y='feature')\n",
+    "plt.title('Top Permutation Importances (Calibrated Pipeline)')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "imp_df.head()"
    ]
   },
   {
