Phase 10: add alternative model pipeline (XGBoost if available, else RandomForest) with evaluation and CV

--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -411,6 +411,110 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 10: Alternative model pipeline (XGBoost if available, else RandomForest)\n",
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Attempt to use XGBoost if installed\n",
+    "use_xgb = False\n",
+    "try:\n",
+    "    import xgboost as xgb\n",
+    "    use_xgb = True\n",
+    "except Exception:\n",
+    "    use_xgb = False\n",
+    "\n",
+    "# Reuse feature engineering decisions from cell 7\n",
+    "# Compute scale_pos_weight for imbalance if using XGBoost\n",
+    "pos_rate = y_train.mean()\n",
+    "scale_pos_weight = float((1 - pos_rate) / max(pos_rate, 1e-9))\n",
+    "\n",
+    "if use_xgb:\n",
+    "    alt_clf = xgb.XGBClassifier(\n",
+    "        n_estimators=500,\n",
+    "        max_depth=6,\n",
+    "        learning_rate=0.05,\n",
+    "        subsample=0.8,\n",
+    "        colsample_bytree=0.8,\n",
+    "        reg_lambda=1.0,\n",
+    "        objective='binary:logistic',\n",
+    "        eval_metric='aucpr',\n",
+    "        scale_pos_weight=scale_pos_weight,\n",
+    "        random_state=42,\n",
+    "        n_jobs=-1\n",
+    "    )\n",
+    "    model_name = 'XGBoost'\n",
+    "else:\n",
+    "    alt_clf = RandomForestClassifier(\n",
+    "        n_estimators=300,\n",
+    "        max_depth=None,\n",
+    "        min_samples_split=2,\n",
+    "        min_samples_leaf=1,\n",
+    "        class_weight='balanced',\n",
+    "        n_jobs=-1,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    model_name = 'RandomForest'\n",
+    "\n",
+    "alt_preprocessor = pipeline.named_steps['preprocess']  # reuse the preprocessor\n",
+    "alt_pipeline = Pipeline(steps=[\n",
+    "    ('preprocess', alt_preprocessor),\n",
+    "    ('model', alt_clf)\n",
+    "])\n",
+    "\n",
+    "# Train\n",
+    "alt_pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
+    "y_proba_alt = alt_pipeline.predict_proba(X_test)[:, 1]\n",
+    "roc_alt = roc_auc_score(y_test, y_proba_alt)\n",
+    "ap_alt = average_precision_score(y_test, y_proba_alt)\n",
+    "prec_alt, rec_alt, thr_alt = precision_recall_curve(y_test, y_proba_alt)\n",
+    "f1_scores_alt = (2 * prec_alt * rec_alt) / (prec_alt + rec_alt + 1e-12)\n",
+    "best_idx_alt = f1_scores_alt[:-1].argmax()\n",
+    "best_threshold_alt = thr_alt[best_idx_alt]\n",
+    "\n",
+    "print(f\"[{model_name}] ROC-AUC: {roc_alt:.4f} | PR-AUC (AP): {ap_alt:.4f}\")\n",
+    "print(f\"[{model_name}] Best threshold by F1: {best_threshold_alt:.4f}\")\n",
+    "\n",
+    "# Business threshold (precision >= 90%)\n",
+    "target_precision = 0.90\n",
+    "valid = []\n",
+    "for i, t in enumerate(thr_alt):\n",
+    "    p = prec_alt[i]\n",
+    "    r = rec_alt[i]\n",
+    "    if p >= target_precision:\n",
+    "        valid.append((t, p, r))\n",
+    "\n",
+    "if valid:\n",
+    "    best_t_biz_alt, best_p_biz_alt, best_r_biz_alt = max(valid, key=lambda x: x[2])\n",
+    "else:\n",
+    "    best_t_biz_alt = best_threshold_alt\n",
+    "    y_tmp = (y_proba_alt >= best_t_biz_alt).astype(int)\n",
+    "    best_p_biz_alt = precision_score(y_test, y_tmp)\n",
+    "    best_r_biz_alt = recall_score(y_test, y_tmp)\n",
+    "\n",
+    "# Confusion matrix at business threshold\n",
+    "y_pred_biz_alt = (y_proba_alt >= best_t_biz_alt).astype(int)\n",
+    "cm_biz_alt = confusion_matrix(y_test, y_pred_biz_alt)\n",
+    "TPa = cm_biz_alt[1,1]; FPa = cm_biz_alt[0,1]; TNa = cm_biz_alt[0,0]; FNa = cm_biz_alt[1,0]\n",
+    "f_biz_alt = f1_score(y_test, y_pred_biz_alt)\n",
+    "\n",
+    "print(f\"[{model_name}] Business threshold (>= {int(target_precision*100)}% precision): {best_t_biz_alt:.4f}\")\n",
+    "print(f\"[{model_name}] Precision={best_p_biz_alt*100:.2f}%, Recall={best_r_biz_alt*100:.2f}%, F1={f_biz_alt*100:.2f}%\")\n",
+    "print(f\"[{model_name}] TP={TPa}, FP={FPa}, TN={TNa}, FN={FNa}\")\n",
+    "\n",
+    "# CV (AP) for alternative pipeline\n",
+    "skf = StratifiedKFold(n_splits=3, shuffle=True, random_state=42)\n",
+    "cv_scores_alt = cross_val_score(alt_pipeline, X, y, cv=skf, scoring='average_precision', n_jobs=None)\n",
+    "print(f\"[{model_name}] PR-AUC (AP) CV: mean={cv_scores_alt.mean():.4f} ± {cv_scores_alt.std():.4f} ->\", [f\"{s:.4f}\" for s in cv_scores_alt])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
