Phase 16: add model comparison summary cell

--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -515,6 +515,85 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 16: Model comparison summary (Logistic vs Calibrated vs Alternative)\n",
+    "import numpy as np\n",
+    "\n",
+    "summary_rows = []\n",
+    "\n",
+    "# Ensure base pipeline metrics are available (from cells 7-9)\n",
+    "try:\n",
+    "    base_row = {\n",
+    "        'model': 'Logistic (Pipeline)',\n",
+    "        'roc_auc': float(roc),\n",
+    "        'pr_auc': float(ap),\n",
+    "        'threshold_f1': float(best_threshold),\n",
+    "    }\n",
+    "    # business threshold from cell 9 variables (best_t)\n",
+    "    base_row.update({\n",
+    "        'threshold_business': float(best_t),\n",
+    "    })\n",
+    "    # compute prec/rec/f1 at business threshold for base model\n",
+    "    y_pred_base_biz = (y_proba >= best_t).astype(int)\n",
+    "    base_row.update({\n",
+    "        'precision_biz': float(precision_score(y_test, y_pred_base_biz)),\n",
+    "        'recall_biz': float(recall_score(y_test, y_pred_base_biz)),\n",
+    "        'f1_biz': float(f1_score(y_test, y_pred_base_biz))\n",
+    "    })\n",
+    "    summary_rows.append(base_row)\n",
+    "except Exception as e:\n",
+    "    pass\n",
+    "\n",
+    "# Calibrated model metrics (from cell 12)\n",
+    "try:\n",
+    "    cal_row = {\n",
+    "        'model': 'Calibrated (Isotonic)',\n",
+    "        'roc_auc': float(roc_cal),\n",
+    "        'pr_auc': float(ap_cal),\n",
+    "        'threshold_f1': float(best_threshold_cal),\n",
+    "        'threshold_business': float(best_t_biz_cal),\n",
+    "    }\n",
+    "    y_pred_cal_biz = (y_proba_cal >= best_t_biz_cal).astype(int)\n",
+    "    cal_row.update({\n",
+    "        'precision_biz': float(precision_score(y_test, y_pred_cal_biz)),\n",
+    "        'recall_biz': float(recall_score(y_test, y_pred_cal_biz)),\n",
+    "        'f1_biz': float(f1_score(y_test, y_pred_cal_biz))\n",
+    "    })\n",
+    "    summary_rows.append(cal_row)\n",
+    "except Exception as e:\n",
+    "    pass\n",
+    "\n",
+    "# Alternative model metrics (from cell 15)\n",
+    "try:\n",
+    "    alt_row = {\n",
+    "        'model': model_name,\n",
+    "        'roc_auc': float(roc_alt),\n",
+    "        'pr_auc': float(ap_alt),\n",
+    "        'threshold_f1': float(best_threshold_alt),\n",
+    "        'threshold_business': float(best_t_biz_alt),\n",
+    "    }\n",
+    "    y_pred_alt_biz = (y_proba_alt >= best_t_biz_alt).astype(int)\n",
+    "    alt_row.update({\n",
+    "        'precision_biz': float(precision_score(y_test, y_pred_alt_biz)),\n",
+    "        'recall_biz': float(recall_score(y_test, y_pred_alt_biz)),\n",
+    "        'f1_biz': float(f1_score(y_test, y_pred_alt_biz))\n",
+    "    })\n",
+    "    summary_rows.append(alt_row)\n",
+    "except Exception as e:\n",
+    "    pass\n",
+    "\n",
+    "summary_df = pd.DataFrame(summary_rows, columns=[\n",
+    "    'model','roc_auc','pr_auc','threshold_f1','threshold_business','precision_biz','recall_biz','f1_biz'\n",
+    "])\n",
+    "\n",
+    "summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
