Phase 17: switch OneHotEncoder to sparse output and use saga solver; update GridSearch

--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -113,12 +113,12 @@
     "\n",
     "preprocessor = ColumnTransformer([\n",
     "    ('num', StandardScaler(), numeric_features),\n",
-    "    ('cat_low', OneHotEncoder(handle_unknown='ignore', sparse=False), low_cardinality_cats)\n",
+    "    ('cat_low', OneHotEncoder(handle_unknown='ignore', sparse=True), low_cardinality_cats)\n",
     "], remainder='passthrough')\n",
     "\n",
     "pipeline = Pipeline(steps=[\n",
     "    ('preprocess', preprocessor),\n",
-    "    ('model', LogisticRegression(class_weight='balanced', max_iter=2000, random_state=42))\n",
+    "    ('model', LogisticRegression(class_weight='balanced', max_iter=2000, solver='saga', random_state=42))\n",
     "])\n",
     "\n",
     "pipeline.fit(X_train, y_train)\n",
@@ -242,7 +242,8 @@
     "\n",
     "param_grid = {\n",
     "    'model__C': [0.01, 0.1, 1.0, 10.0],\n",
-    "    'model__solver': ['lbfgs', 'saga']\n",
+    "    # Using 'saga' because pipeline output can be sparse with OneHotEncoder(sparse=True)\n",
+    "    'model__solver': ['saga']\n",
     "}\n",
     "cv = StratifiedKFold(n_splits=3, shuffle=True, random_state=42)\n",
     "\n",
