Phase 18: add time-based cross-validation (TimeSeriesSplit) with PR-AUC and ROC-AUC

--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -595,6 +595,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 18: Time-based cross-validation using `step` (blocked folds)\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "\n",
+    "if 'step' in df.columns:\n",
+    "    df_sorted = df.sort_values('step').reset_index(drop=True)\n",
+    "    X_sorted = df_sorted.drop(columns=['fraud'])\n",
+    "    y_sorted = df_sorted['fraud']\n",
+    "\n",
+    "    # Rebuild the same preprocessor as in cell 7 for consistency\n",
+    "    nunique_sorted = X_sorted.nunique()\n",
+    "    low_cardinality_cats_tscv = [c for c in X_sorted.columns if (X_sorted[c].dtype in ['int64','int32','object','category']) and (nunique_sorted[c] > 1) and (nunique_sorted[c] <= 50)]\n",
+    "    continuous_candidates = ['amount','step','age']\n",
+    "    numeric_features_tscv = [c for c in continuous_candidates if c in X_sorted.columns]\n",
+    "\n",
+    "    preprocessor_tscv = ColumnTransformer([\n",
+    "        ('num', StandardScaler(), numeric_features_tscv),\n",
+    "        ('cat_low', OneHotEncoder(handle_unknown='ignore', sparse=True), low_cardinality_cats_tscv)\n",
+    "    ], remainder='passthrough')\n",
+    "\n",
+    "    tscv_pipeline = Pipeline(steps=[\n",
+    "        ('preprocess', preprocessor_tscv),\n",
+    "        ('model', LogisticRegression(class_weight='balanced', max_iter=2000, solver='saga', random_state=42))\n",
+    "    ])\n",
+    "\n",
+    "    tscv = TimeSeriesSplit(n_splits=5)\n",
+    "    ap_scores = []\n",
+    "    roc_scores = []\n",
+    "\n",
+    "    for fold, (train_idx, test_idx) in enumerate(tscv.split(X_sorted), start=1):\n",
+    "        X_tr, X_te = X_sorted.iloc[train_idx], X_sorted.iloc[test_idx]\n",
+    "        y_tr, y_te = y_sorted.iloc[train_idx], y_sorted.iloc[test_idx]\n",
+    "        tscv_pipeline.fit(X_tr, y_tr)\n",
+    "        y_prob_te = tscv_pipeline.predict_proba(X_te)[:, 1]\n",
+    "        ap_scores.append(average_precision_score(y_te, y_prob_te))\n",
+    "        roc_scores.append(roc_auc_score(y_te, y_prob_te))\n",
+    "        print(f\"[TimeCV] Fold {fold}: PR-AUC(AP)={ap_scores[-1]:.4f}, ROC-AUC={roc_scores[-1]:.4f}\")\n",
+    "\n",
+    "    print(f\"[TimeCV] PR-AUC(AP) mean={pd.Series(ap_scores).mean():.4f} ± {pd.Series(ap_scores).std():.4f}\")\n",
+    "    print(f\"[TimeCV] ROC-AUC mean={pd.Series(roc_scores).mean():.4f} ± {pd.Series(roc_scores).std():.4f}\")\n",
+    "else:\n",
+    "    print(\"Time-based CV skipped: 'step' column not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
