Phase 19: add experiment tracking to artifacts/experiments.csv

--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -644,6 +644,100 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Phase 19: Experiment tracking – append metrics and thresholds to artifacts/experiments.csv\n",
+    "import csv, time\n",
+    "from datetime import datetime\n",
+    "\n",
+    "os.makedirs('artifacts', exist_ok=True)\n",
+    "log_path = os.path.join('artifacts', 'experiments.csv')\n",
+    "\n",
+    "def append_exp_row(row: dict, header_order: list):\n",
+    "    write_header = not os.path.exists(log_path)\n",
+    "    with open(log_path, 'a', newline='') as f:\n",
+    "        w = csv.DictWriter(f, fieldnames=header_order)\n",
+    "        if write_header:\n",
+    "            w.writeheader()\n",
+    "        w.writerow(row)\n",
+    "\n",
+    "# Common metadata\n",
+    "timestamp = datetime.utcnow().strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "split_type = 'time' if ('USE_TIME_SPLIT' in globals() and USE_TIME_SPLIT and ('step' in X.columns)) else 'stratified'\n",
+    "\n",
+    "# Prepare and log rows for available models\n",
+    "rows = []\n",
+    "header = [\n",
+    "    'timestamp','model','split_type',\n",
+    "    'roc_auc','pr_auc',\n",
+    "    'threshold_f1','threshold_business',\n",
+    "    'precision_biz','recall_biz','f1_biz'\n",
+    "]\n",
+    "\n",
+    "# Base logistic pipeline (uncalibrated)\n",
+    "try:\n",
+    "    y_pred_biz = (y_proba >= best_t).astype(int)\n",
+    "    rows.append({\n",
+    "        'timestamp': timestamp,\n",
+    "        'model': 'Logistic (Pipeline)',\n",
+    "        'split_type': split_type,\n",
+    "        'roc_auc': float(roc),\n",
+    "        'pr_auc': float(ap),\n",
+    "        'threshold_f1': float(best_threshold),\n",
+    "        'threshold_business': float(best_t),\n",
+    "        'precision_biz': float(precision_score(y_test, y_pred_biz)),\n",
+    "        'recall_biz': float(recall_score(y_test, y_pred_biz)),\n",
+    "        'f1_biz': float(f1_score(y_test, y_pred_biz))\n",
+    "    })\n",
+    "except Exception:\n",
+    "    pass\n",
+    "\n",
+    "# Calibrated model\n",
+    "try:\n",
+    "    y_pred_biz_cal = (y_proba_cal >= best_t_biz_cal).astype(int)\n",
+    "    rows.append({\n",
+    "        'timestamp': timestamp,\n",
+    "        'model': 'Calibrated (Isotonic)',\n",
+    "        'split_type': split_type,\n",
+    "        'roc_auc': float(roc_cal),\n",
+    "        'pr_auc': float(ap_cal),\n",
+    "        'threshold_f1': float(best_threshold_cal),\n",
+    "        'threshold_business': float(best_t_biz_cal),\n",
+    "        'precision_biz': float(precision_score(y_test, y_pred_biz_cal)),\n",
+    "        'recall_biz': float(recall_score(y_test, y_pred_biz_cal)),\n",
+    "        'f1_biz': float(f1_score(y_test, y_pred_biz_cal))\n",
+    "    })\n",
+    "except Exception:\n",
+    "    pass\n",
+    "\n",
+    "# Alternative model (XGB/RF)\n",
+    "try:\n",
+    "    y_pred_biz_alt = (y_proba_alt >= best_t_biz_alt).astype(int)\n",
+    "    rows.append({\n",
+    "        'timestamp': timestamp,\n",
+    "        'model': model_name,\n",
+    "        'split_type': split_type,\n",
+    "        'roc_auc': float(roc_alt),\n",
+    "        'pr_auc': float(ap_alt),\n",
+    "        'threshold_f1': float(best_threshold_alt),\n",
+    "        'threshold_business': float(best_t_biz_alt),\n",
+    "        'precision_biz': float(precision_score(y_test, y_pred_biz_alt)),\n",
+    "        'recall_biz': float(recall_score(y_test, y_pred_biz_alt)),\n",
+    "        'f1_biz': float(f1_score(y_test, y_pred_biz_alt))\n",
+    "    })\n",
+    "except Exception:\n",
+    "    pass\n",
+    "\n",
+    "for r in rows:\n",
+    "    append_exp_row(r, header)\n",
+    "\n",
+    "print(f\"Logged {len(rows)} experiment row(s) to {log_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
